--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:layout_margin="10dp"
+
     tools:context=".activity.MainActivity">
 
 <Button
@@ -17,6 +18,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Post"
+        android:text="    Post    "
         android:id="@+id/btnPost"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="     Put     "
+        android:id="@+id/btnPut"/>
 </LinearLayout>
